<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sport fit</string>
    <string name="language">EN</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Menu -->
    <string name="action_listen_train">Listen</string>
    <string name="action_settings">Configuración</string>

    <!-- MainTrainFragment -->
    <string name="main_train_button_start">Empezar</string>

    <!--fragment_train_training -->
    <string name="train_training_tv1_tipo_entrenamiento">Tipo de entrenamiento:</string>
    <string name="train_training_tv2_avisos">Método de avisos:</string>
    <string name="train_training_tv3_avisos_distancia">Dará un aviso cada kilometro realizado</string>
    <string name="train_training_tv4_avisos_tiempo">Dará un aviso cada 5 minutos realizados</string>
    <string name="train_training_rb_aviso_distancia">Aviso por distancia</string>
    <string name="train_training_rb_aviso_tiempo">Aviso por tiempo</string>
    <string name="train_training_rb_andar">Walk</string>
    <string name="train_training_rb_correr">Run</string>
    <string name="train_training_rb_bicicleta">Cycling</string>
    <string name="train_training_button_entrenar">Training</string>


    <!--fragment_train_review -->
    <string name="train_review_type">SPORT</string>
    <string name="train_review_duration">DURATION</string>
    <string name="train_review_distance">DISTANCE</string>
    <string name="train_review_calories">CALORIES</string>
    <string name="train_review_avgspeed">AVG. SPEED</string>
    <string name="train_review_avgpace">AVG. PACE</string>

    <!--fragment_main_train -->
    <string name="main_train_time">Time</string>
    <string name="main_train_distance">Distance</string>
    <string name="main_train_speed">Speed</string>
    <string name="main_train_alert">Alert:</string>


    <!-- login register texts -->
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="mail">Mail</string>
    <string name="attemptingLogin">Attempting login...</string>
    <string name="internetRequired">Requiere conexión a internet</string>
    <string name="remember">Remember login</string>


    <!-- user stats texts -->
    <string name="userStatsDescription">Complete all, if you know it. Stats with * are needed.</string>
    <string name="age">*Age</string>
    <string name="height">*Height</string>
    <string name="weight">*Weight</string>
    <string name="genre">*Genre</string>
    <string name="imc">Body mass ratio</string>
    <string name="water">Body water</string>
    <string name="pgc">Body fats</string>
    <string name="save">Guardar</string>
    <string name="man">Men</string>
    <string name="woman">Woman</string>
    <string name="notSaved">Not saved</string>
    <string name="fieldRequired">Field required</string>
    <string name="physicalType">Activity level</string>
    <string name="sizeNeck">Neck size</string>
    <string name="sizeWaistMan">Waist size</string>
    <string name="sizeWaistWoman">Hips size</string>
    <string name="chechkedHeight">The height field has to be between 50 and 250 cm</string>
    <string name="chechkedWeight">The weight field must be between 30 and 300 kg</string>


    <!-- Messages error -->
    <!-- Errors DatabaseHandler -->
    <string name="dropError">ERROR. Not been able to clear tables database</string>
    <string name="createError">ERROR. Have not been able to create tables in the database</string>
    <string name="insertUserError">ERROR. Not been able to be inserted by the user in the database</string>
    <string name="insertError">ERROR. Not been able to be inserted in the database</string>
    <string name="selectError">ERROR. Could not execute query</string>
    <string name="deleteError">ERROR. Could not delete table</string>
    <string name="dateError">Parse format date error</string>

    <!-- fragment_train_history -->
    <string name="train_history_distance">Total distance:</string>
    <string name="train_history_speed">Average speed:</string>
    <string name="train_history_calories">Calories burned:</string>
    <string name="train_history_routes">Number of routes:</string>

    <!-- train -->
    <string name="train_running">Run</string>
    <string name="train_cycling">Cycling</string>
    <string name="train_walking">Walk</string>
    <string name="att"></string>

    <!-- type de alert -->
    <string name="alert_distance">Distance</string>
    <string name="alert_time">Time</string>

    <!--fragment_main_diet-->
    <string name="tip">Tips</string>
    <string name="breakfast">Breakfast</string>
    <string name="brunch">Brunch</string>
    <string name="lunch">Lunch</string>
    <string name="afternoonSnack">Afternoon snack</string>
    <string name="dinner">Dinner</string>
    <string name="confirm">Confirm</string>

    <!-- Map Manager -->
    <string name="mapmangaer_start">Start</string>
    <string name="mapmangaer_end">End</string>

    <!-- Mensajes de alerta Train training-->
    <string name="alert_train_training_ok">OK</string>
    <string name="alert_train_training_titulo">Session ON</string>
    <string name="alert_train_training_mensaje">Ends the session to change the settings.</string>

    <!-- Fragment Review Diets -->
    <string name="bottonSelectionDiet">Select</string>
    <string name="buttonSeeDiet">See</string>
    <string name="createDietButton">Create diet</string>
    <string name="title_activity_diet">DietActivity</string>
    <string name="day">Day </string>
    <string name="quantity">Quantity (g)</string>

    <!-- Gps IntentService -->
    <string name="service_start_train">¡Training started!</string>
    <string name="service_advice" formatted="false">Distance: %.1f kilometers. Time: %d hours, %d minutes, %d seconds. Speed: %.1f kilometers per hour.</string>

    <!--Fragment Diet Foods -->
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>

    <!-- Frgament Main Review -->
    <string name="diet">Dieta</string>
    <string name="main_review_calories_diet">Calorias ingeridas</string>
    <string name="main_review_calories_burned">Calorias consumidas</string>
    <string name="main_review_distance">Kilometros realizados</string>


</resources>
