<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

<Button

    android:id="@+id/register"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/login"
    android:layout_alignParentBottom="true"
    android:layout_alignRight="@+id/login"
    android:layout_marginBottom="25dp"
    android:text="@string/register" />


<Button

    android:id="@+id/login"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@+id/register"
    android:layout_alignLeft="@+id/password"
    android:layout_alignRight="@+id/password"
    android:text="@string/login" />

<EditText

    android:id="@+id/password"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:ems="10"
    android:inputType="textPassword"
    android:layout_below="@+id/TextView01"
    android:layout_alignLeft="@+id/username"
    android:layout_alignStart="@+id/username">

<requestFocus />

    </EditText>

<TextView

    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="20dp"
    android:gravity="center"
    android:textSize="40sp"
    android:text="@string/app_name"
    android:textStyle="bold" />

<ImageView

    android:id="@+id/imageView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/textView2"
    android:layout_centerHorizontal="true"
    android:src="@drawable/logo"
    android:layout_marginTop="20dp" />

<TextView

    android:id="@+id/TextView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/password"
    android:layout_below="@+id/username"
    android:layout_toLeftOf="@+id/imageView1" />

<EditText

    android:id="@+id/username"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:ems="10"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true" />

<TextView

    android:id="@+id/textView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/username"
    android:layout_marginTop="43dp"
    android:layout_below="@+id/imageView1"
    android:layout_alignLeft="@+id/TextView01"
    android:layout_alignStart="@+id/TextView01" />

    </RelativeLayout>