<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_span="1">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="wrap_content">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">


            <TextView

                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:text="@string/app_name"
                android:textStyle="bold"
                android:layout_margin="20dp"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"/>

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <ImageView

                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/app_name"
                android:layout_gravity="center"
                android:layout_weight="1" />
        </TableRow>

        <TableRow>
            <TextView

                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:text="@string/mail"
                android:layout_weight="1" />
        </TableRow>

        <TableRow>
            <EditText

                android:id="@+id/mail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow>
            <TextView

                android:id="@+id/TextView01"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:text="@string/password"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow>
        <EditText

            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_weight="1"/>
        </TableRow>

        <TableRow>
        <CheckBox

            android:id="@+id/remember"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:text="@string/remember"
            android:checked="true"
                />



        </TableRow>

        <TableRow>

            <Button

                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/login"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="40dp"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow>
            <Button

                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/register"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"/>

        </TableRow>

        </TableLayout>
    </ScrollView>