<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView

        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="40sp"
        android:text="@string/app_name"
        android:textStyle="bold" />

    <ImageView

        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"
        android:layout_marginTop="20dp" />

<TextView

    android:id="@+id/textView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/password"
    android:layout_centerVertical="true"
    android:text="@string/username" />

<EditText

    android:id="@+id/username"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/textView1"
    android:layout_below="@+id/textView1"
    android:ems="10"
    android:inputType="text" />

    <EditText
        android:id="@+id/mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/TextView01"
        android:layout_alignLeft="@+id/TextView01"
        android:layout_alignStart="@+id/TextView01"
        android:inputType="textWebEmailAddress" />

    <TextView

    android:id="@+id/TextView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/username"
    android:layout_below="@+id/username"
    android:text="@string/mail" />


    <EditText

    android:id="@+id/password"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        android:ems="10"
    android:inputType="textPassword"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password"
        android:layout_below="@+id/mail"
        android:layout_toLeftOf="@+id/register" />

    <Button

        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:text="@string/register"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/textView1" />

    </RelativeLayout>