<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_span="1">

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent" android:layout_height="wrap_content">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent">


                <TextView

                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:text="@string/userStatsDescription"
                    android:textStyle="bold"
                    android:layout_margin="20dp"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/genre"
                    android:id="@+id/textView"
                    android:layout_marginTop="0dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_weight="1"
                    android:layout_marginBottom="10dp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/age"
                    android:id="@+id/textViewAge"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow>

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/man"
                    android:id="@+id/radioButton"
                    android:layout_weight="1"
                    android:layout_marginLeft="40dp" />

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton2"
                    android:layout_weight="1"
                    android:layout_marginRight="40dp"
                    android:text="@string/woman" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerAge"
                    android:layout_weight="1"
                    android:spinnerMode="dialog"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/height"
                    android:id="@+id/textViewHeight"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/height"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginLeft="40dp"
                    android:inputType="text|numberDecimal"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:id="@+id/textViewWeight"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/weight"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginLeft="40dp"
                    android:inputType="text|numberDecimal"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow>
                <TextView

                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/imc"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow>
                <EditText

                    android:id="@+id/imc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="0dp"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow>
                <TextView

                    android:id="@+id/TextView01"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/water"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow>
                <EditText

                    android:id="@+id/water"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="0dp"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:layout_weight="1"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mg"
                    android:id="@+id/textViewMg"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/mg"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginLeft="40dp"
                    android:inputType="numberDecimal"
                    android:layout_weight="1" />
            </TableRow>


            <TableRow>
                <Button

                    android:id="@+id/save"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/save"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"/>

            </TableRow>

        </TableLayout>
    </ScrollView>